# q

./: .gitignore  README.md  api-spec.md  architecture.md  example_usage.py  publish.sh  pyproject.toml  pytest.ini  q  q.py  requirements.md  requirements.txt  run_q.py  tech-stack.md  v2.md
.github/workflows/: release.yaml  test.yml
demos/: 20-questions.py
q/: __init__.py  agents.py  cli.py  client.py  core.py  message.py
q/cli/: commands.py  main.py  models.py  parser.py  session.py  terminal.py
q/clients/: __init__.py  anthropic.py  base.py  google.py  openai.py  xai.py
q/commands/: __init__.py  base.py  code.py  default.py  explain.py  image.py  registry.py  shell.py  web.py
q/config/: __init__.py  manager.py  models.py
q/generators/: __init__.py  image.py  text.py
q/providers/: __init__.py  anthropic.py  base.py  factory.py  google.py  openai.py
q/utils/: __init__.py  exceptions.py  processing.py
src/: __init__.py  agent.py  agents.py  client.py  clients.py  message.py
src/cli/: agent.py  commands.py  flags.py  main.py  models.py  parser.py  session.py  state.py  terminal.py  utils.py
src/providers/: __init__.py  anthropic.py  openai.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_backward_compatibility.py  test_cli.py  test_command_registry.py  test_commands.py  test_config.py  test_generators.py  test_image_generator.py  test_integration.py  test_integration_comprehensive.py  test_openai_provider.py  test_performance_security.py  test_processing.py  test_text_generator.py
