[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-bot"
dynamic = ["version"]
description = "An LLM agent from the comfort of your command line"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.75.0",
    "colorama==0.4.6",
    "distro==1.9.0",
    "humanize==4.14.0",
    "openai==2.9.0",
    "pydantic==2.12.5",
    "pyperclip==1.11.0",
    "python-dotenv==1.2.1",
    "termcolor==3.2.0",
]
authors = [
    {name = "Tushar Khan", email = "dev@tusharkhan.com"}
]
readme = "README.md"
license = "MIT"

[project.scripts]
q = "q.cli.main:main"

[project.urls]
Repository = "https://github.com/tk755/q"

[tool.setuptools.packages.find]
include = ["q*"]

[tool.setuptools.dynamic]
version = {attr = "q.__version__"}
