[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-bot"
dynamic = ["version"]
description = "An expressive, composable, provider-agnostic command-line interface for LLMs."
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.111.0",
    "colorama==0.4.6",
    "google-genai>=2.9.0",
    "distro==1.9.0",
    "flatten-dict==0.5.0",
    "openai==2.43.0",
    "psutil==7.2.2",
    "pydantic==2.13.4",
    "pyperclip==1.11.0",
    "python-dotenv==1.2.2",
    "termcolor==3.3.0",
]
authors = [
    {name = "Tushar Khan", email = "dev@tusharkhan.com"}
]
readme = "README.md"
license = "MIT"

[project.scripts]
q = "q.cli.main:main"

[project.urls]
Repository = "https://github.com/tk755/q"

[tool.setuptools.packages.find]
include = ["q*"]

[tool.setuptools.dynamic]
version = {attr = "q.__version__"}
